--- a/index/index.html
+++ b/index/index.html
@@ -16,7 +16,7 @@
   
   <!-- Title and description ================================================== -->
   <title>
-    SAM Ceramics | Home
+    SAM Ceramics | Hom
   </title>
   
   <!-- Social meta ================================================== -->
