--- a/index/pages/about.html
+++ b/index/pages/about.html
@@ -657,7 +657,7 @@
 
                   <h1 class="site-header__logo order-header  post-large--hide large--hide medium-down--hide">
 
-                    <a href="../index.html" itemprop="url">
+                    <a href="../../index.html" itemprop="url">
                       <img class="normal-logo" src="../logo.png" alt="tileo">
                     </a>
 
@@ -688,7 +688,7 @@
                               <div class="h1 site-header__logo" itemscope itemtype="http://schema.org/Organization">
 
 
-                                <a href="../index.html" style="max-width: px;">
+                                <a href="../../index.html" style="max-width: px;">
                                   <img class="normal-logo"
                                     src="../logo.png"
                                     alt="tileo" itemprop="logo">
@@ -1328,7 +1328,7 @@
 
 
                                       <li class="menu-lv-1 item">
-                                        <a class="" href="../index.html">
+                                        <a class="" href="../../index.html">
                                           Home
 
 
@@ -2270,7 +2270,7 @@
                                         </div>
                                       </li>
                                       <li class="menu-lv-1 item">
-                                        <a class="" href="../pages/about.html">
+                                        <a class="current" href="../pages/about.html">
                                           About us
                                         </a>
                                       </li>
@@ -2290,18 +2290,18 @@
                                           </div>
                                           <ul class="site-nav-dropdown">
                                             <li class="menu-lv-2">
-                                              <a class=" current " href="about.html">
+                                              <a class=" current " href="#">
                                                 KAG
                                               </a>
                                             </li>
 
                                             <li class="menu-lv-2">
-                                              <a class="  " href="services.html">
+                                              <a class="  " href="#">
                                                 Tecton
                                               </a>
                                             </li>
                                             <li class="menu-lv-2">
-                                              <a class="  " href="faqs.html">
+                                              <a class="  " href="catalogue.html">
                                                 Catalogue
                                               </a>
                                             </li>
@@ -2475,7 +2475,7 @@
       <div class="container-bg">
 
         <h1>About</h1>
-        <a href="../index.html" title="Back to the frontpage">Home</a>
+        <a href="../../index.html" title="Back to the frontpage">Home</a>
 
         <span aria-hidden="true" class="breadcrumb__sep">&#47;</span>
         <span>About</span>
@@ -3011,7 +3011,7 @@
                     }
                   </style>
                   <div class="footer__logo">
-                    <a href="../index.html">
+                    <a href="../../index.html">
                       <img src="../sam.png" alt="tileo">
                       <img src="../name.png" alt="tileo">
                     </a>
@@ -3267,11 +3267,23 @@
 
               <div
                 class="footer__copyright grid__item wide--one-third post-large--one-third large--one-third medium--one-whole">
-                <p>Copyright &copy; 2020 Sam Group of Companies | Materialized by Magnion Technology Factory</p>
+                <p>Copyright &copy; 2020 Sam Group of Companies</p>
               </div>
+              <div class="footer__payment-icons grid__item wide--one-third post-large--one-third large--one-third medium--one-whole">
+                <ul>
+                  <li>Materialized by 
+                    <a target="_blank" href="http://magniontechnologies.co.in">Magnion Technology Factory</a> 
+                  </li>
+                </ul>
+              </div>
+
+
+
               <div class="footer__logo-social grid__item wide--one-third post-large--one-third large--one-third medium--one-whole">
-              
-              <ul class="no-bullets footer__social">
+
+
+
+                <ul class="no-bullets footer__social">
 
                   <li>
                     <a target="_blank" href="#" title="translation missing: en.layout.footer.social_platform">
@@ -3319,11 +3331,22 @@
                       <span class="icon__fallback-text">Pinterest</span>
                     </a>
                   </li>
+
+
+
+
+
+
                 </ul>
               </div>
+
+
+
+
               <!-- <div
                 class="footer__payment-icons grid__item wide--one-third post-large--one-third large--one-third medium--one-whole">
                 <ul class="inline-list payment-icons">
+
                   <li class="icon--payment">
                     <svg viewBox="0 0 38 24" xmlns="http://www.w3.org/2000/svg" role="img" width="38" height="24"
                       aria-labelledby="pi-visa">
@@ -3337,6 +3360,7 @@
                         fill="#142688" />
                     </svg>
                   </li>
+
                   <li class="icon--payment">
                     <svg viewBox="0 0 38 24" xmlns="http://www.w3.org/2000/svg" role="img" width="38" height="24"
                       aria-labelledby="pi-master">
@@ -3351,6 +3375,7 @@
                         d="M22 12c0-2.4-1.2-4.5-3-5.7-1.8 1.3-3 3.4-3 5.7s1.2 4.5 3 5.7c1.8-1.2 3-3.3 3-5.7z" />
                     </svg>
                   </li>
+
                   <li class="icon--payment">
                     <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 38 24" width="38" height="24"
                       aria-labelledby="pi-american_express">
@@ -3365,7 +3390,9 @@
                           d="M8.971,10.268 L9.745,12.144 L8.203,12.144 L8.971,10.268 Z M25.046,10.346 L22.069,10.346 L22.069,11.173 L24.998,11.173 L24.998,12.412 L22.075,12.412 L22.075,13.334 L25.052,13.334 L25.052,14.073 L27.129,11.828 L25.052,9.488 L25.046,10.346 L25.046,10.346 Z M10.983,8.006 L14.978,8.006 L15.865,9.941 L16.687,8 L27.057,8 L28.135,9.19 L29.25,8 L34.013,8 L30.494,11.852 L33.977,15.68 L29.143,15.68 L28.065,14.49 L26.94,15.68 L10.03,15.68 L9.536,14.49 L8.406,14.49 L7.911,15.68 L4,15.68 L7.286,8 L10.716,8 L10.983,8.006 Z M19.646,9.084 L17.407,9.084 L15.907,12.62 L14.282,9.084 L12.06,9.084 L12.06,13.894 L10,9.084 L8.007,9.084 L5.625,14.596 L7.18,14.596 L7.674,13.406 L10.27,13.406 L10.764,14.596 L13.484,14.596 L13.484,10.661 L15.235,14.602 L16.425,14.602 L18.165,10.673 L18.165,14.603 L19.623,14.603 L19.647,9.083 L19.646,9.084 Z M28.986,11.852 L31.517,9.084 L29.695,9.084 L28.094,10.81 L26.546,9.084 L20.652,9.084 L20.652,14.602 L26.462,14.602 L28.076,12.864 L29.624,14.602 L31.499,14.602 L28.987,11.852 L28.986,11.852 Z" />
                       </g>
                     </svg>
+
                   </li>
+
                   <li class="icon--payment">
                     <svg viewBox="0 0 38 24" xmlns="http://www.w3.org/2000/svg" width="38" height="24" role="img"
                       aria-labelledby="pi-paypal">
@@ -3382,6 +3409,7 @@
                         d="M23.3 8.1c-.1-.1-.2-.1-.3-.1-.1 0-.2 0-.3-.1-.3-.1-.7-.1-1.1-.1h-3c-.1 0-.2 0-.2.1-.2.1-.3.2-.3.4l-.7 4.4v.1c0-.3.3-.5.6-.5h1.3c2.5 0 4.1-1 4.6-3.8v-.2c-.1-.1-.3-.2-.5-.2h-.1z" />
                     </svg>
                   </li>
+
                   <li class="icon--payment">
                     <svg viewBox="0 0 38 24" xmlns="http://www.w3.org/2000/svg" role="img" width="38" height="24"
                       aria-labelledby="pi-diners_club">
@@ -3395,6 +3423,7 @@
                         fill="#3086C8" />
                     </svg>
                   </li>
+
                   <li class="icon--payment">
                     <svg xmlns="http://www.w3.org/2000/svg" role="img" viewBox="0 0 38 24" width="38" height="24"
                       aria-labelledby="pi-discover">
@@ -3408,9 +3437,13 @@
                       <path fill="#494949" d="M9 11h20v2H9z" />
                       <path d="M22 12c0 1.7-1.3 3-3 3s-3-1.4-3-3 1.4-3 3-3c1.7 0 3 1.3 3 3z" fill="#EDA024" />
                     </svg>
+
                   </li>
+
                 </ul>
               </div> -->
+
+
             </div>
           </div>
         </div>
@@ -3678,7 +3711,7 @@
       <div class="ajax-left">
 
         <p class="added-to-wishlist info">translation missing: en.products.wishlist.added_to_wishlist</p>
-        <img class="ajax-product-image" alt="modal window" src="../index.html" />
+        <img class="ajax-product-image" alt="modal window" src="../../index.html" />
         <div class="ajax-cart-desc">
           <h3 class="ajax-product-title"></h3>
           <span class="ajax_price"></span>
