--- a/index/pages/catalogue.html
+++ b/index/pages/catalogue.html
@@ -653,7 +653,7 @@
 
                   <h1 class="site-header__logo order-header  post-large--hide large--hide medium-down--hide">
 
-                    <a href="../index.html" itemprop="url">
+                    <a href="../../index.html" itemprop="url">
                       <img class="normal-logo" src="../logo.png" alt="tileo">
                     </a>
 
@@ -684,7 +684,7 @@
                               <div class="h1 site-header__logo" itemscope itemtype="http://schema.org/Organization">
 
 
-                                <a href="../index.html" style="max-width: px;">
+                                <a href="../../index.html" style="max-width: px;">
                                   <img class="normal-logo"
                                     src="../../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/logo2c0e.png?v=370860014632646512"
                                     alt="tileo" itemprop="logo">
@@ -1324,7 +1324,7 @@
 
 
                                       <li class="menu-lv-1 item">
-                                        <a class="" href="../index.html">
+                                        <a class="" href="../../index.html">
                                           Home
 
 
@@ -2617,7 +2617,7 @@
       <div class="container-bg">
 
         <h1>Catalogue</h1>
-        <a href="../index.html" title="Back to the frontpage">Home</a>
+        <a href="../../index.html" title="Back to the frontpage">Home</a>
 
         <span aria-hidden="true" class="breadcrumb__sep">&#47;</span>
         <span>Catalogue</span>
@@ -3141,7 +3141,7 @@
                     }
                   </style>
                   <div class="footer__logo">
-                    <a href="../index.html">
+                    <a href="../../index.html">
                       <img src="../sam.png" alt="tileo">
                       <img src="../name.png" alt="tileo">
                     </a>
@@ -3397,9 +3397,15 @@
 
               <div
                 class="footer__copyright grid__item wide--one-third post-large--one-third large--one-third medium--one-whole">
-                <p>Copyright &copy; 2020 Sam Group of Companies | Materialized by Magnion Technology Factory</p>
+                <p>Copyright &copy; 2020 Sam Group of Companies</p>
               </div>
-
+              <div class="footer__payment-icons grid__item wide--one-third post-large--one-third large--one-third medium--one-whole">
+                <ul>
+                  <li>Materialized by 
+                    <a target="_blank" href="http://magniontechnologies.co.in">Magnion Technology Factory</a> 
+                  </li>
+                </ul>
+              </div>
 
 
 
@@ -3869,7 +3875,7 @@
       <div class="ajax-left">
 
         <p class="added-to-wishlist info">translation missing: en.products.wishlist.added_to_wishlist</p>
-        <img class="ajax-product-image" alt="modal window" src="../index.html" />
+        <img class="ajax-product-image" alt="modal window" src="../../index.html" />
         <div class="ajax-cart-desc">
           <h3 class="ajax-product-title"></h3>
           <span class="ajax_price"></span>
