--- a/index/thirupathur.html
+++ b/index/thirupathur.html
@@ -82,7 +82,7 @@
               <div class="container">
                 <div class="grid--full site-header__menubar">
                   <h1 class="site-header__logo order-header  post-large--hide large--hide medium-down--hide">
-                    <a href="index.html" itemprop="url" style="max-width: 50 px;">
+                    <a href="../index.html" itemprop="url" style="max-width: 50 px;">
                       <img class="normal-logo" src="logo.png" alt="Sam Ceramics">
                       <!-- <img class="normal-logo" src="name.png" alt="Sam Ceramics"> -->
                     </a>
@@ -104,7 +104,7 @@
                           <div class="header-mb-middle header-mb-items">
                             <div class="header-logo">
                               <h1 class="site-header__logo" itemscope itemtype="http://schema.org/Organization">
-                                <a  href="index.html" style="max-width:20 px;">
+                                <a  href="../index.html" style="max-width:20 px;">
                                   <img class="normal-logo" src="logo.png" alt="Sam ceramics" itemprop="logo">
                                   <!-- <img class="normal-logo" src="name.png" alt="Sam Ceramics"> -->
                                 </a>
@@ -241,7 +241,7 @@
                               <nav class="nav-bar" role="navigation">
                                 <ul class="site-nav checking">
                                     <li class="menu-lv-1 item">
-                                      <a class="current"  href="index.html">
+                                      <a class="current"  href="../index.html">
                                         Home
                                       </a>
                                     </li>
@@ -470,7 +470,7 @@
         <style>
         .slider_style_3 .slide-offer-text span {color: #2205c4!important;}
         @media screen and (min-width: 320px) and (max-width: 767px){
-          .slider_style_3.slider-1596439642225-list .slider-content {background:rgba(0, 0, 0, 0.85);}
+          /* .slider_style_3.slider-1596439642225-list .slider-content {background:rgba(0, 0, 0, 0.85);} */
           }
         </style>
         </div>
@@ -491,7 +491,7 @@
           /* .slider_style_1 .btn:hover {color:#ffffff!important;background:#a58050!important;}*/
 
           @media screen and (min-width: 320px) and (max-width: 767px){
-            .slider_style_1.slider-1592399068412-list .slider-content {background:rgba(0, 0, 0, 0.85);}
+            /* .slider_style_1.slider-1592399068412-list .slider-content {background:rgba(0, 0, 0, 0.85);} */
           }
 
         </style>
@@ -512,7 +512,7 @@
         <style>
         .slider_style_2 .slide-offer-text span {color:#ffffff!important;}
         @media screen and (min-width: 320px) and (max-width: 767px){
-          .slider_style_2.slider-1592399153626-list .slider-content {background:rgba(0, 0, 0, 0.85);}
+          /* .slider_style_2.slider-1592399153626-list .slider-content {background:rgba(0, 0, 0, 0.85);} */
           }
           </style>
           </div>
@@ -1862,7 +1862,7 @@
                   }
                 </style>
                 <div class="footer__logo">
-                  <a href="index.html">
+                  <a href="../index.html">
                     <img style="align-items: center; align-content: center;" src="sam.png" alt="Sam Ceramics">
                     <img src="name.png" alt="Sam Ceramics">
                   </a>
