Created gallery and modified index file on nav bar to add videos link

--- a/index/index.html
+++ b/index/index.html
@@ -16,7 +16,7 @@
   
   <!-- Title and description ================================================== -->
   <title>
-    SAM Ceramics | Hom
+    SAM Ceramics | Home
   </title>
   
   <!-- Social meta ================================================== -->
@@ -61,9 +61,6 @@
   window.loading_url = "../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/loading9491.gif?v=9255329245202621775";     
   window.file_url = "http://cdn.shopify.com/s/files/1/0437/5671/6194/files/?2174";
   window.asset_url = "";
-  window.product_name="Product Name";
-  window.product_image="Product Image";
-  window.product_desc="Product Description";
   window.use_color_swatch = true;
   window.color_swatch_style = "variant_grouped";
   window.infinity_scroll_feature = false;
@@ -302,15 +299,15 @@
                                         </div>
                                         <ul class="site-nav-dropdown">
                                           <li class="menu-lv-2">
-                                            <a class="  " href="pages/about.html">
+                                            <a class="  " href="collections/gallery.html">
                                               Photos
                                             </a>
                                           </li>
-                                          <!-- <li class="menu-lv-2">
-                                            <a class="  " href="pages/services.html">
+                                          <li class="menu-lv-2">
+                                            <a class="  " href="collections/gallery.html">
                                               Videos
                                             </a>
-                                          </li> -->
+                                          </li>
                                         </ul>
                                       </div>
                                     </li>
@@ -462,7 +459,7 @@
               We Provide Ultimate Wooden & Flooring Tiles Services                   
             </h2>
             <div class="slider_inner_block">
-              <a href="#" class="slide-button animated btn">View Gallery</a>
+              <a href="collections/gallery.html" class="slide-button animated btn">View Gallery</a>
             </div>
           </div>
         </div>
@@ -482,7 +479,7 @@
             <div class="slide_left">
               <h2 class="slide-heading animated" style="font-size: 60px; color:#1f1f1f;">Taking flooring to <br> another level</h2>
               <div class="slider_inner_block">
-                <a href="#" class="slide-button animated btn">View Gallery</a>
+                <a href="collections/gallery.html" class="slide-button animated btn">View Gallery</a>
               </div>
             </div>
           </div>
@@ -505,7 +502,7 @@
               Superior, expert,<br> quality, Affordable
             </h2>
             <div class="slider_inner_block">
-              <a href="#" class="slide-button animated btn">View Gallery</a>
+              <a href="collections/gallery.html" class="slide-button animated btn">View Gallery</a>
             </div>
           </div>
         </div>
@@ -1782,9 +1779,7 @@
           
       </div>
     </div> 
-  </div>
-      
-    </main>
+  </main>
 
   <div id="shopify-section-footer" class="shopify-section">
     <footer class="site-footer footer-default" data-section-id="footer" data-section-type="footer-section" style=" background-color:#8a704d;">
@@ -1847,7 +1842,7 @@
                   }
                 }
               </style>
-              <div  class="grid__item large--one-half medium--one-half footer__item--1596278325618 footer-links">
+              <div  class="grid__item large--one-half medium--one-half footer__item--1596278314761 footer-links">
                 <h4 class="footer__title ">
                   Head Office
                 </h4>
