--- a/index/karaikudi.html
+++ b/index/karaikudi.html
@@ -615,7 +615,7 @@
               <div class="overlay style_1">
                 <div class="featured-image">
                   <a class="banner_half_img" href="pages/contact.html">
-                    <img src="./img/Shop2.JPG" alt="Stylish Ceramic Tiles" />
+                    <img src="img/Shop2.JPG" alt="Stylish Ceramic Tiles" />
                   </a>
                 </div>
                 <!-- <div class="featured-content oneimage-1596277330278-0 imageText_position imgtxt-middle" >
@@ -629,7 +629,7 @@
               <div class="overlay style_1">
                 <div class="featured-image">
                   <a class="banner_half_img" href="pages/contact.html">
-                    <img src="./img/shop1.JPG" alt="Stylish Wooden Tiles" />
+                    <img src="img/shop1.JPG" alt="Stylish Wooden Tiles" />
                   </a>
                 </div>
                 <!-- <div class="featured-content oneimage-1596277330278-2 imageText_position imgtxt-middle">
