karaikudi about catalogue contact pages

--- a/index/pages/catalogue.html
+++ b/index/pages/catalogue.html
@@ -732,7 +732,6 @@
                                 </li>
 
 
-
                                 <li class="customer_account">
 
                                   <ul>
@@ -742,13 +741,7 @@
                                           class="fa fa-user post-large--hide large--hide medium-down--hide"></i><span
                                           class="wide--hide">Log in</span></a>
                                     </li>
-
-
-
                                   </ul>
-
-
-
                                 </li>
 
 
@@ -756,14 +749,7 @@
                             </div>
 
                             <ul class="menu-icon">
-
-
-
-
-
-
-
-                              <li class="menu_bar_right">
+                              <!-- <li class="menu_bar_right">
                                 <div class="customer_account">
                                   <ul>
 
@@ -794,11 +780,6 @@
 
                                                 <div class="dropdown-menu currency-menu" id="currencies">
 
-
-
-
-
-
                                                   <a class="dropdown-item" href="#" data-currency="USD">
                                                     <span class="img-icon">
                                                       <img
@@ -809,13 +790,6 @@
                                                       USD
                                                     </span>
                                                   </a>
-
-
-
-
-
-
-
                                                   <a class="dropdown-item" href="#" data-currency="EUR">
                                                     <span class="img-icon">
                                                       <img
@@ -826,13 +800,6 @@
                                                       EUR
                                                     </span>
                                                   </a>
-
-
-
-
-
-
-
                                                   <a class="dropdown-item" href="#" data-currency="GBP">
                                                     <span class="img-icon">
                                                       <img
@@ -843,13 +810,6 @@
                                                       GBP
                                                     </span>
                                                   </a>
-
-
-
-
-
-
-
                                                   <a class="dropdown-item" href="#" data-currency="AUD">
                                                     <span class="img-icon">
                                                       <img
@@ -860,44 +820,6 @@
                                                       AUD
                                                     </span>
                                                   </a>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                                                 </div>
                                               </div>
                                             </div>
@@ -907,13 +829,13 @@
 
                                         </li>
                                       </ul>
-                                    </li>
+                                    </li> -->
 
 
 
 
 
-                                    <li>
+                                    <!-- <li>
                                       <a title="Log in" href="../account/login.html"><span
                                           class="post-large--hide large--hide medium-down--hide"><i class="fas fa-user"
                                             aria-hidden="true"></i></span></a>
@@ -926,13 +848,12 @@
                                       <a class="wishlist" href="wishlist.html" title="Wishlist"><span
                                           class="post-large--hide large--hide medium-down--hide"><i
                                             class="fas fa-heart"></i></span></a>
-                                    </li>
+                                    </li> -->
 
 
-                                    <li
-                                      class="header-bar__module cart header_cart post-large--hide large--hide medium-down--hide">
+                                    <!-- <li class="header-bar__module cart header_cart post-large--hide large--hide medium-down--hide"> -->
                                       <!-- Mini Cart Start -->
-                                      <div class="baskettop">
+                                      <!-- <div class="baskettop">
                                         <a href="#" class="icon-cart-arrow cart-icon" data-cart-toggle>
 
 
@@ -957,7 +878,7 @@
 
 
 
-                                    </li>
+                                    </li> -->
 
                                   </ul>
                                 </div>
