--- a/index/pages/about.html
+++ b/index/pages/about.html
@@ -734,45 +734,25 @@
                                   <a href="wishlist.html" title="Wishlist"><span class="wide--hide">Wishlist</span><i
                                       class="fas fa-heart"></i></a>
                                 </li>
-
-
-
                                 <li class="customer_account">
 
                                   <ul>
-
                                     <li>
                                       <a href="../account/login.html" title="Log in" data-value="value 1"><i
                                           class="fa fa-user post-large--hide large--hide medium-down--hide"></i><span
                                           class="wide--hide">Log in</span></a>
                                     </li>
-
-
-
                                   </ul>
-
-
-
                                 </li>
-
-
                               </ul>
                             </div>
-
                             <ul class="menu-icon">
-
-
-
-
-
-
-
                               <li class="menu_bar_right">
                                 <div class="customer_account">
                                   <ul>
 
 
-                                    <li class="header_currency">
+                                    <!-- <li class="header_currency">
                                       <ul class="tbl-list">
                                         <li class="currency dropdown-parent uppercase currency-block">
 
@@ -797,12 +777,6 @@
                                                 </label>
 
                                                 <div class="dropdown-menu currency-menu" id="currencies">
-
-
-
-
-
-
                                                   <a class="dropdown-item" href="#" data-currency="USD">
                                                     <span class="img-icon">
                                                       <img
@@ -813,14 +787,7 @@
                                                       USD
                                                     </span>
                                                   </a>
-
-
-
-
-
-
-
-                                                  <a class="dropdown-item" href="#" data-currency="EUR">
+                                               <a class="dropdown-item" href="#" data-currency="EUR">
                                                     <span class="img-icon">
                                                       <img
                                                         src="../../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/i-currency-2b66c.png?v=5653372019488774628"
@@ -830,13 +797,6 @@
                                                       EUR
                                                     </span>
                                                   </a>
-
-
-
-
-
-
-
                                                   <a class="dropdown-item" href="#" data-currency="GBP">
                                                     <span class="img-icon">
                                                       <img
@@ -847,13 +807,6 @@
                                                       GBP
                                                     </span>
                                                   </a>
-
-
-
-
-
-
-
                                                   <a class="dropdown-item" href="#" data-currency="AUD">
                                                     <span class="img-icon">
                                                       <img
@@ -864,44 +817,6 @@
                                                       AUD
                                                     </span>
                                                   </a>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
                                                 </div>
                                               </div>
                                             </div>
@@ -911,13 +826,13 @@
 
                                         </li>
                                       </ul>
-                                    </li>
+                                    </li> -->
 
 
 
 
 
-                                    <li>
+                                    <!-- <li>
                                       <a title="Log in" href="../account/login.html"><span
                                           class="post-large--hide large--hide medium-down--hide"><i class="fas fa-user"
                                             aria-hidden="true"></i></span></a>
@@ -930,13 +845,12 @@
                                       <a class="wishlist" href="wishlist.html" title="Wishlist"><span
                                           class="post-large--hide large--hide medium-down--hide"><i
                                             class="fas fa-heart"></i></span></a>
-                                    </li>
+                                    </li> -->
 
 
-                                    <li
-                                      class="header-bar__module cart header_cart post-large--hide large--hide medium-down--hide">
+                                    <!-- <li class="header-bar__module cart header_cart post-large--hide large--hide medium-down--hide"> -->
                                       <!-- Mini Cart Start -->
-                                      <div class="baskettop">
+                                      <!-- <div class="baskettop">
                                         <a href="#" class="icon-cart-arrow cart-icon" data-cart-toggle>
 
 
@@ -961,7 +875,7 @@
 
 
 
-                                    </li>
+                                    </li> -->
 
                                   </ul>
                                 </div>
