pretty formatted css and modified index file

--- a/index.html
+++ b/index.html
@@ -45,21 +45,21 @@
 <link href="cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/font-all.minc83d.css?v=14597452402338798491" rel="stylesheet" type="text/css" media="all" />  
   
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
+<!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
+<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic"> -->
 
   <!-- Javascript ================================================== -->
 <script src="code.jquery.com/jquery-3.2.1.min.js"></script>  
-<script src="ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script> 
+<!-- <script src="ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>  -->
 <script src="cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/header6070.js?v=10373096426439681222" type="text/javascript"></script>
 
 <script>
   window.preloader_enable = false;
   window.use_sticky = true;
   window.enable_sidebar_multiple_choice = false;
-  window.loading_url = "cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/loading9491.gif?v=9255329245202621775";     
-  window.file_url = "http://cdn.shopify.com/s/files/1/0437/5671/6194/files/?2174";
+  // window.loading_url = "cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/loading9491.gif?v=9255329245202621775";     
+  // window.file_url = "http://cdn.shopify.com/s/files/1/0437/5671/6194/files/?2174";
   window.asset_url = "";
   window.use_color_swatch = true;
   window.color_swatch_style = "variant_grouped";
