Modified about us after merge

--- a/pages/about.html
+++ b/pages/about.html
@@ -18,7 +18,7 @@
   <!--[if IE]><meta http-equiv='X-UA-Compatible' content='IE=edge,chrome=1'><![endif]-->
 
   <link rel="shortcut icon"
-    href="../sam.png"
+    href="../img/sam.png"
     type="image/png" />
 
   <!-- Title and description ================================================== -->
@@ -34,9 +34,9 @@
   <meta property="og:url" content="about.html">
 
   <meta property="og:image"
-    content="../../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/logo2c0e.png?v=370860014632646512">
+    content="../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/logo2c0e.png?v=370860014632646512">
   <meta property="og:image:secure_url"
-    content="../../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/logo2c0e.png?v=370860014632646512">
+    content="../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/logo2c0e.png?v=370860014632646512">
 
   <meta property="og:site_name" content="tileo">
   <meta name="twitter:card" content="summary">
@@ -47,20 +47,20 @@
   <meta name="viewport" content="width=device-width,initial-scale=1">
   <meta name="theme-color" content="rgba(0,0,0,0)">
   <!-- CSS ================================================== -->
-  <link href="../../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/frame.scssf526.css?v=3971717294728970669"
+  <link href="../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/frame.scssf526.css?v=3971717294728970669"
     rel="stylesheet" type="text/css" media="all" />
   <link
-    href="../../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/home-sections.scss9211.css?v=12654800420335229906"
+    href="../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/home-sections.scss9211.css?v=12654800420335229906"
     rel="stylesheet" type="text/css" media="all" />
-  <link href="../../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/style5576.css?v=5169164907222966650"
+  <link href="../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/style5576.css?v=5169164907222966650"
     rel="stylesheet" type="text/css" media="all" />
   <link href="http://cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/slick.scss?v=10122632354879939270"
     rel="stylesheet" type="text/css" media="all" />
-  <link href="../../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/prettyPhotode1c.css?v=12757784511525754184"
+  <link href="../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/prettyPhotode1c.css?v=12757784511525754184"
     rel="stylesheet" type="text/css" media="all" />
-  <link href="../../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/animatea14e.css?v=17046942425478865338"
+  <link href="../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/animatea14e.css?v=17046942425478865338"
     rel="stylesheet" type="text/css" media="all" />
-  <link href="../../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/font-all.minc83d.css?v=14597452402338798491"
+  <link href="../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/font-all.minc83d.css?v=14597452402338798491"
     rel="stylesheet" type="text/css" media="all" />
 
   <link rel="stylesheet" type="text/css"
@@ -78,9 +78,9 @@
   <link rel="stylesheet" type="text/css"
     href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
 
-  <script src="../../code.jquery.com/jquery-3.2.1.min.js"></script>
-  <script src="../../ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
-  <script src="../../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/header6070.js?v=10373096426439681222"
+  <script src="../code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="../ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>
+  <script src="../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/header6070.js?v=10373096426439681222"
     type="text/javascript"></script>
 
 
@@ -481,7 +481,7 @@
       <div class="container-bg">
 
         <h1>About</h1>
-        <a href="../../index.html" title="Back to the frontpage">Home</a>
+        <a href="../index.html" title="Back to the frontpage">Home</a>
 
         <span aria-hidden="true" class="breadcrumb__sep">&#47;</span>
         <span>About</span>
@@ -607,7 +607,7 @@
                             <div class="center-img">
 
                               <img
-                                src="../../cdn.shopify.com/s/files/1/0437/5671/6194/files/abo-2_582x3926cbd.png?v=1598351348"
+                                src="../cdn.shopify.com/s/files/1/0437/5671/6194/files/abo-2_582x3926cbd.png?v=1598351348"
                                 alt="" title="" />
 
                             </div>
@@ -652,7 +652,7 @@
 
                             <div class="grid__item wide--one-half post-large--one-half large--one-half">
                               <div class="detail-block "
-                                style=" background-image:url(../../cdn.shopify.com/s/files/1/0437/5671/6194/files/abo-4_1000X1516.jpg?v=1598351698); ">
+                                style=" background-image:url(../cdn.shopify.com/s/files/1/0437/5671/6194/files/abo-4_1000X1516.jpg?v=1598351698); ">
                                 <div class="grid__item wide--one-half post-large--one-half large--one-half">
                                   <div class="detail detail-one" style="background-color:rgba(138, 112, 77, 0.8);">
 
@@ -680,7 +680,7 @@
 
                             <div class="grid__item wide--one-half post-large--one-half large--one-half">
                               <div class="detail-block "
-                                style=" background-image:url(../../cdn.shopify.com/s/files/1/0437/5671/6194/files/abo-5_1000Xc885.jpg?v=1598351729); ">
+                                style=" background-image:url(../cdn.shopify.com/s/files/1/0437/5671/6194/files/abo-5_1000Xc885.jpg?v=1598351729); ">
                                 <div class="grid__item wide--one-half post-large--one-half large--one-half">
                                   <div class="detail detail-two" style="background-color:rgba(138, 112, 77, 0.8);">
 
@@ -708,7 +708,7 @@
 
                             <div class="grid__item wide--one-half post-large--one-half large--one-half">
                               <div class="detail-block "
-                                style=" background-image:url(../../cdn.shopify.com/s/files/1/0437/5671/6194/files/abo-3_1000X4058.jpg?v=1598351758); ">
+                                style=" background-image:url(../cdn.shopify.com/s/files/1/0437/5671/6194/files/abo-3_1000X4058.jpg?v=1598351758); ">
                                 <div class="grid__item wide--one-half post-large--one-half large--one-half"></div>
                                 <div class="grid__item wide--one-half post-large--one-half large--one-half">
                                   <div class="detail detail-three" style="background-color:rgba(138, 112, 77, 0.8);">
@@ -737,7 +737,7 @@
 
                             <div class="grid__item wide--one-half post-large--one-half large--one-half">
                               <div class="detail-block "
-                                style=" background-image:url(../../cdn.shopify.com/s/files/1/0437/5671/6194/files/abo-6-1_1000X2031.jpg?v=1598351839); ">
+                                style=" background-image:url(../cdn.shopify.com/s/files/1/0437/5671/6194/files/abo-6-1_1000X2031.jpg?v=1598351839); ">
                                 <div class="grid__item wide--one-half post-large--one-half large--one-half"></div>
                                 <div class="grid__item wide--one-half post-large--one-half large--one-half">
                                   <div class="detail detail-four detail-right"
@@ -1219,25 +1219,25 @@
   </div>
 
   <script
-    src="../../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/inview-donut-easing91ee.js?v=11410926627178193725"
+    src="../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/inview-donut-easing91ee.js?v=11410926627178193725"
     type="text/javascript"></script>
-  <script src="../../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/theme5f8d.js?v=17225070249964267527"
-    type="text/javascript"></script>
-  <script
-    src="../../cdn.shopify.com/shopifycloud/shopify/assets/themes_support/option_selection-fe6b72c2bbdd3369ac0bfefe8648e3c889efca213baefd4cfb0dd9363563831f.js"
+  <script src="../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/theme5f8d.js?v=17225070249964267527"
     type="text/javascript"></script>
   <script
-    src="../../cdn.shopify.com/shopifycloud/shopify/assets/themes_support/api.jquery-e94e010e92e659b566dbc436fdfe5242764380e00398907a14955ba301a4749f.js"
+    src="../cdn.shopify.com/shopifycloud/shopify/assets/themes_support/option_selection-fe6b72c2bbdd3369ac0bfefe8648e3c889efca213baefd4cfb0dd9363563831f.js"
     type="text/javascript"></script>
-  <script src="../../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/history-to-light18d8.js?v=17945962704583084051"
+  <script
+    src="../cdn.shopify.com/shopifycloud/shopify/assets/themes_support/api.jquery-e94e010e92e659b566dbc436fdfe5242764380e00398907a14955ba301a4749f.js"
     type="text/javascript"></script>
-  <script src="../../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/footerdeae.js?v=17868930316502956096"
+  <script src="../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/history-to-light18d8.js?v=17945962704583084051"
     type="text/javascript"></script>
-  <script src="../../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/shop5d3f.js?v=12956011040366326659"
+  <script src="../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/footerdeae.js?v=17868930316502956096"
+    type="text/javascript"></script>
+  <script src="../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/shop5d3f.js?v=12956011040366326659"
     type="text/javascript"></script>
 
 
-  <script src="../../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/wow6fc4.js?v=8607965041847799793"></script>
+  <script src="../cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/wow6fc4.js?v=8607965041847799793"></script>
 
   <div class="wrap-overlay"></div>
 </body>
