Modified about us

--- a/pages/about.html
+++ b/pages/about.html
@@ -107,7 +107,7 @@
                 <div class="grid--full site-header__menubar">
                   <h1 class="site-header__logo order-header  post-large--hide large--hide medium-down--hide">
                     <a href="index.html" itemprop="url" style="max-width: 50 px;">
-                      <img class="normal-logo" src="./index/logo.png" alt="Sam Ceramics">
+                      <img class="normal-logo" src="../img/logo.png" alt="Sam Ceramics">
                       <!-- <img class="normal-logo" src="name.png" alt="Sam Ceramics"> -->
                     </a>
                   </h1>
@@ -129,7 +129,7 @@
                             <div class="header-logo">
                               <h1 class="site-header__logo" itemscope itemtype="http://schema.org/Organization">
                                 <a  href="index.html" style="max-width:20 px;">
-                                  <img class="normal-logo" src="./index/logo.png" alt="Sam ceramics" itemprop="logo">
+                                  <img class="normal-logo" src="../img/logo.png" alt="Sam ceramics" itemprop="logo">
                                   <!-- <img class="normal-logo" src="name.png" alt="Sam Ceramics"> -->
                                 </a>
                               </h1>
@@ -271,7 +271,7 @@
                                     </li>
                                     <li class="menu-lv-1 item">
 
-                                      <a class="menu__moblie "  href="./index/pages/about.html">
+                                      <a class="menu__moblie "  href="#">
 
                                         About Us
                                         <!-- <span class="icon-dropdown" data-toggle-menu-mb>
@@ -296,21 +296,21 @@
                                         <ul class="site-nav-dropdown">
                                           <li class="menu-lv-2">
 
-                                            <a class="  " href="./index/pages/about.html">
+                                            <a class="  " href="about.html">
 
                                               KAG
                                             </a>
                                           </li>
                                           <li class="menu-lv-2">
 
-                                            <a class="  " href="./index/pages/services.html">
+                                            <a class="  " href="services.html">
 
                                               Tecton
                                             </a>
                                           </li>
                                           <li class="menu-lv-2">
 
-                                            <a class="  " href="./index/pages/catalogue.html">
+                                            <a class="  " href="catalogue.html">
 
                                               Catalogue
                                             </a>
@@ -335,12 +335,12 @@
                                         <ul class="site-nav-dropdown">
                                           <li class="menu-lv-2">
 
-                                            <a class="  " href="./index/collections/gallery.html">
+                                            <a class="  " href="photos.html">
                                               Photos
                                             </a>
                                           </li>
                                           <li class="menu-lv-2">
-                                            <a class="  " href="./index/collections/gallery.html">
+                                            <a class="  " href="videos.html">
                                               Videos
                                             </a>
                                           </li>
@@ -350,7 +350,7 @@
                                     </li>
                                     <li class="menu-lv-1 item">
 
-                                      <a class="menu__mobile"  href="./index/pages/contact.html">
+                                      <a class="menu__mobile"  href="contact.html">
 
                                         Contact
                                       </a>
@@ -1007,8 +1007,8 @@
                 </style>
                 <div class="footer__logo">
                   <a href="../index.html">
-                    <img style="align-items: center; align-content: center;" src="./index/sam.png" alt="Sam Ceramics">
-                    <img src="./index/name.png" alt="Sam Ceramics">
+                    <img style="align-items: center; align-content: center;" src="../img/sam.png" alt="Sam Ceramics">
+                    <img src="../img/name.png" alt="Sam Ceramics">
                   </a>
                 </div>
                <!-- <ul class="no-bullets footer__social">
@@ -1081,9 +1081,9 @@
                 <div class="footer__collapsible">
                   <ul class="no-bullets site-footer__linklist">
 
-                    <li><a href="./index/karaikudi.html">Karaikudi</a></li>
-                    <li><a href="./index/pudukkottai.html">Pudukkottai</a></li>
-                    <li><a href="./index/thirupathur.html">Thirupathur</a></li>
+                    <li><a href="../branch/karaikudi.html">Karaikudi</a></li>
+                    <li><a href="../branch/pudukkottai.html">Pudukkottai</a></li>
+                    <li><a href="../branch/thirupathur.html">Thirupathur</a></li>
                     
                     <!-- <li><a href="pages/terms-and-conditions.html">Gallery</a></li>
                     <li><a href="pages/services.html">Contact Us</a></li> -->
@@ -1107,7 +1107,7 @@
                 <div class="footer__collapsible">
                   <ul class="no-bullets site-footer__linklist">
 
-                    <li><a href="./index/pages/about.html">About Us</a></li>
+                    <li><a href="#">About Us</a></li>
 
                     <li><a href="#">Gallery</a></li>
                     <li><a href="#">Catalogue</a></li>
