Font changes in index file

--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
 <link href="cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/prettyPhotode1c.css?v=12757784511525754184" rel="stylesheet" type="text/css" media="all" />  
 <link href="cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/animatea14e.css?v=17046942425478865338" rel="stylesheet" type="text/css" media="all" />
 <link href="cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/font-all.minc83d.css?v=14597452402338798491" rel="stylesheet" type="text/css" media="all" />  
-  
-<link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
+
+<link rel="preconnect" href="https://fonts.gstatic.com">
+<link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,300;0,400;0,500;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap" rel="stylesheet">
+<!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic"> -->
 <!-- <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic">
 <link rel="stylesheet" type="text/css" href="http://fonts.googleapis.com/css?family=Montserrat:300,300italic,400,500,600,400italic,600italic,700,700italic,800,800italic"> -->
@@ -71,7 +73,7 @@
   <div class="shifter-page is-moved-by-drawer" id="PageContainer"> 
     <div id="PageContainer"></div>
     <div class="quick-view"></div>
-    
+
     <div class="wrapper-header wrapper-container">
       <div class="header-type-8">
         <header class="site-header header-default">
