--- a/pages/about.html
+++ b/pages/about.html
@@ -106,7 +106,7 @@
               <div class="container">
                 <div class="grid--full site-header__menubar">
                   <h1 class="site-header__logo order-header  post-large--hide large--hide medium-down--hide">
-                    <a href="index.html" itemprop="url" style="max-width: 50 px;">
+                    <a href="../index.html" itemprop="url" style="max-width: 50 px;">
                       <img class="normal-logo" src="../img/logo.png" alt="Sam Ceramics">
                       <!-- <img class="normal-logo" src="name.png" alt="Sam Ceramics"> -->
                     </a>
@@ -128,7 +128,7 @@
                           <div class="header-mb-middle header-mb-items">
                             <div class="header-logo">
                               <h1 class="site-header__logo" itemscope itemtype="http://schema.org/Organization">
-                                <a  href="index.html" style="max-width:20 px;">
+                                <a  href="../index.html" style="max-width:20 px;">
                                   <img class="normal-logo" src="../img/logo.png" alt="Sam ceramics" itemprop="logo">
                                   <!-- <img class="normal-logo" src="name.png" alt="Sam Ceramics"> -->
                                 </a>
@@ -265,7 +265,7 @@
                               <nav class="nav-bar" role="navigation">
                                 <ul class="site-nav checking">
                                     <li class="menu-lv-1 item">
-                                      <a class="current"  href="index.html">
+                                      <a class="current"  href="../index.html">
                                         Home
                                       </a>
                                     </li>
