--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
   <!-- Javascript ================================================== -->
 <script src="code.jquery.com/jquery-3.2.1.min.js"></script>  
-<!-- <script src="ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script>  -->
+<script src="ajax.googleapis.com/ajax/libs/jquery/1.8.1/jquery.min.js"></script> 
 <script src="cdn.shopify.com/s/files/1/0437/5671/6194/t/2/assets/header6070.js?v=10373096426439681222" type="text/javascript"></script>
 
 <script>
